Removed unecessary thread owner check. We just care about whether the lock was acquired.

BUG=717596

Review-Url: https://codereview.chromium.org/2873133006
Cr-Commit-Position: refs/heads/master@{#471800}

Former-commit-id: f30da9cab0d5c860219ac2c1863bdd0202690bc4